--- a/civopAPI.yaml
+++ b/civopAPI.yaml
@@ -29,6 +29,10 @@ paths:
                   type: string
                 specialist:
                   type: string
+                branch:
+                  type: string
+                establishment:
+                  type: string
                 inspectionDate:
                   type: string
                   format: date
