--- a/civopAPI.yaml
+++ b/civopAPI.yaml
@@ -84,6 +84,16 @@ paths:
                     type: string
                   contentType:
                     type: string
+        '400':
+          description: Server error while processing the control task.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error: string
+                  message: string
+                  filename: string                   
         '500':
           description: Server error while processing the control task.
 
