Add repeatedYN field to civopAPI.yaml

--- a/civopAPI.yaml
+++ b/civopAPI.yaml
@@ -36,6 +36,8 @@ paths:
                 inspectionDate:
                   type: string
                   format: date
+                repeatedYN:
+                  type: boolean
                 numberOfDefects:
                   type: integer
                 codesOfDefects:
